message swipe-cite
